name:                regalloc
version:             0.0.0.0
category:            Compiler
license:             MIT
license-file:        LICENSE.txt
synopsis:            Register allocation with Backpack
copyright:           Copyright (c) Austin Seipp 2017
author:              Austin Seipp
maintainer:          Austin Seipp <aseipp@pobox.com>
build-type:          Simple
cabal-version:       >= 2.1
tested-with:         GHC == 8.2.2

-------------------------------------------------------------------------------

common options
  ghc-options:        -Wall -fwarn-tabs
  default-language:   Haskell2010

common deps-basic
  -- Common external libraries
  build-depends:
    base              ^>= 4.10

common deps
  -- Common internal private libraries
  import: deps-basic
  build-depends:
    regalloc-types

-------------------------------------------------------------------------------
-- Base types

library regalloc-types
  import: options, deps-basic
  hs-source-dirs: regalloc-types

  exposed-modules:
    RegAlloc.Types

-------------------------------------------------------------------------------
-- Signature libraries, characterizing our interfaces

library regalloc-ir
  import: options, deps
  hs-source-dirs: regalloc-ir

  signatures:
    RegAlloc.IR

library regalloc-impl
  import: options, deps
  hs-source-dirs: regalloc-impl

  build-depends:
    regalloc-ir
  signatures:
    RegAlloc.Impl

-------------------------------------------------------------------------------
-- Implementations of the 'impl' interface

library regalloc-linear
  import: options, deps
  hs-source-dirs: regalloc-impl

  build-depends:
    regalloc-ir,

    linearscan        ^>= 1.0

  exposed-modules:    RegAlloc.Impl.LinearScan

library regalloc-graph
  import: options, deps
  hs-source-dirs:     regalloc-impl

  build-depends:
    regalloc-ir,

    fgl               ^>= 5.5,
    graphviz          ^>= 2999.19

  exposed-modules:    RegAlloc.Impl.GraphColor

-------------------------------------------------------------------------------

library regalloc-example-ir
  import: options, deps
  hs-source-dirs: regalloc-example

  exposed-modules: IR

executable regalloc-example
  import: options, deps
  hs-source-dirs: regalloc-example

  main-is: Main.hs

  build-depends:
    -- Chosen IR implementation and allocation algorithm
    regalloc-example-ir,
    regalloc-graph,
    regalloc-linear

  mixins:
    regalloc-linear (RegAlloc.Impl.LinearScan as IR.LinearScan)
           requires (RegAlloc.IR as IR),
    regalloc-graph  (RegAlloc.Impl.GraphColor as IR.GraphColor)
           requires (RegAlloc.IR as IR)
